<resources>
    <string name="app_name">Workout Home</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_routines">Routines</string>
    <string name="menu_exercises">Exercises</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_restart">Restart</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ejercistarse">A ejercitarse!</string>
    <string name="descansar">A descansar!</string>
    <string name="error_no_exercise">Porfavor seleccione un ejercicio.</string>
    <string name="message_no_exercises">No se encontraron ejercicios.</string>
    <string name="label_filter_exercise_name">Nombre del ejercicio</string>
    <string name="label_filter_name">Buscar por nombre:</string>
    <string name="label_filter_type">Seleccionado:</string>
    <string name="hint_exercise_select">Sin seleccionar</string>
    <string name="label_select_exercise">Ejercicio</string>
    <string name="label_select_work_time">Tiempo de ejercicio</string>
    <string name="label_select_rest_time">Tiempo de descanso</string>
    <string name="label_select_repetitions">Repeticiones</string>
    <string name="hint_select_repetitions">0 repeticiones</string>
    <string name="btn_text_cancel">Cancelar</string>
    <string name="btn_text_save">Guardar</string>
    <string name="label_add_exercise">Añadir ejercicio</string>
    <string name="btn_add_exercise">Añadir</string>
    <string name="label_rutine_name">Nombre</string>
    <string name="label_required">*</string>
    <string name="hint_rutine_name">Nombre de la rutina</string>
    <string name="label_rutine_description">Descripción</string>
    <string name="hint_rutine_description">Descripción de la rutina</string>
    <string name="label_rutine_exercises">Ejercicios</string>
    <string name="label_exercises_count">0/100</string>
    <string name="label_option_colors">Colores</string>
    <string name="label_options_dark_mode">Modo oscuro</string>
    <string name="label_options_sound_exercise_rest">Cambio ejercitarce/descansar</string>
    <string name="label_options_sound_next">Cambio de ejercicio</string>
    <string name="label_sound_end">Finalizacion de rutina</string>
    <string name="label_sound_narrator">Narracion</string>
    <string name="label_options_sound">Sonido</string>
    <string name="player_rutine_name"><![CDATA[Rutina > 1/5]]></string>
    <string name="label_exercise_description">Descripción</string>
    <string name="label_exercise_video">Video del ejercicio</string>
    <string name="label_exercise_steps">Pasos</string>
    <string name="label_exercise_tips">Tips</string>
    <string name="label_option_menu">Menu</string>
    <string name="title_activity_main">Leanback MainActivity</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>

</resources>