<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_routines">

    <fragment
        android:id="@+id/nav_routines"
        android:name="com.example.homeworkoutapp.ui.routines.RoutinesFragment"
        android:label="@string/menu_routines"
        tools:layout="@layout/fragment_routines" />

    <fragment
        android:id="@+id/nav_exercises"
        android:name="com.example.homeworkoutapp.ui.exercises.ExercisesFragment"
        android:label="@string/menu_exercises"
        tools:layout="@layout/fragment_exercises" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.homeworkoutapp.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_restart"
        android:name="com.example.homeworkoutapp.ui.restart.RestartFragment"
        android:label="@string/menu_restart"
        tools:layout="@layout/fragment_restart" />


</navigation>