<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.routines.NewRutineFragment">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/fragment_title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            android:layout_marginHorizontal="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_option_colors"
                android:textAppearance="@style/item_title"/>

            <Switch
                android:id="@+id/switch_dark_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingHorizontal="10dp"
                android:text="@string/label_options_dark_mode"
                android:textAppearance="@style/label_input_text"
                tools:ignore="UseSwitchCompatOrMaterialXml"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/label_options_sound"
                android:textAppearance="@style/item_title"/>

            <Switch
                android:id="@+id/switch_sound_next_countdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingHorizontal="10dp"
                android:text="@string/label_options_sound_exercise_rest"
                android:textAppearance="@style/label_input_text"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
            <Switch
                android:id="@+id/switch_sound_next_exercise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingHorizontal="10dp"
                android:text="@string/label_options_sound_next"
                android:textAppearance="@style/label_input_text"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
            <Switch
                android:id="@+id/switch_sound_routine_finish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingHorizontal="10dp"
                android:text="@string/label_sound_end"
                android:textAppearance="@style/label_input_text"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
            <Switch
                android:id="@+id/switch_narration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingHorizontal="10dp"
                android:text="@string/label_sound_narrator"
                android:textAppearance="@style/label_input_text"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>