<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/fragment_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp">

        <TextView
            android:id="@+id/exercise_name_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/label_add_exercise"
            android:textAppearance="@style/content_title_fragment" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_select_exercise"
                android:layout_gravity="center_vertical"
                android:textAppearance="@style/label_input_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="10dp"
                android:background="@drawable/container_text">

                <TextView
                    android:id="@+id/selected_exercise"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hint_exercise_select"
                    android:paddingVertical="7dp"
                    android:layout_marginHorizontal="10dp"
                    android:background="@color/container_transparent"
                    android:textAlignment="center"
                    android:textAppearance="@style/label_input_text"/>

            </LinearLayout>


        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/select_exercise"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="10dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/container_accept_button"
            android:text="Seleccionar un ejercicio."
            android:textAllCaps="false"
            android:textAppearance="@style/accept_button_text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_select_work_time"
                android:layout_gravity="center_vertical"
                android:textAppearance="@style/label_input_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="10dp"
                android:background="@drawable/container_text">

                <TextView
                    android:id="@+id/exercise_work_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:hint="00:00:00"
                    android:paddingVertical="7dp"
                    android:layout_marginHorizontal="10dp"
                    android:background="@color/container_transparent"
                    android:textAlignment="center"
                    android:textAppearance="@style/label_input_text"/>

            </LinearLayout>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_select_rest_time"
                android:layout_gravity="center_vertical"
                android:textAppearance="@style/label_input_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="10dp"
                android:background="@drawable/container_text">

                <TextView
                    android:id="@+id/exercise_rest_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:hint="00:00:00"
                    android:paddingVertical="7dp"
                    android:layout_marginHorizontal="10dp"
                    android:background="@color/container_transparent"
                    android:textAlignment="center"
                    android:textAppearance="@style/label_input_text"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_select_repetitions"
                android:layout_gravity="center_vertical"
                android:textAppearance="@style/label_input_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="10dp"
                android:background="@drawable/container_text">

                <TextView
                    android:id="@+id/exercise_repetitions"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hint_select_repetitions"
                    android:paddingVertical="7dp"
                    android:layout_marginHorizontal="10dp"
                    android:background="@color/container_transparent"
                    android:textAlignment="center"
                    android:textAppearance="@style/label_input_text"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="end">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancel_exercise"
                android:layout_width="110dp"
                android:layout_height="35dp"
                android:background="@drawable/container_cancel_button"
                android:text="@string/btn_text_cancel"
                android:textAppearance="@style/cancel_button_text"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/add_excercise"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:background="@drawable/container_accept_button"
                android:layout_marginStart="10dp"
                android:text="@string/btn_add_exercise"
                android:textAppearance="@style/accept_button_text"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>